<resources>
    <string name="app_name">Vizivandor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">VÍZIVÁNDOR</string>
    <string name="nav_header_subtitle">zs@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="tura1">Felső-Tisza</string>
    <string name="tura2">Tokaj és Bodrogzug</string>
    <string name="tura3">Dunakanyar</string>
    <string name="tura4">Szigetköz</string>
    <string name="tura5">Alsó-Duna</string>
    <string name="tura6">Kőrösök</string>
    <string name="tura7">Tisza-tó</string>

    <string name="menu_home">Főoldal</string>
    <string name="menu_tura">Túra útvonalak</string>
    <string name="menu_slideshow">Toplista</string>
    <string name="menu_tools">Útravaló</string>
    <string name="menu_share">Térkép</string>
    <string name="menu_send">Jelentkezés</string>
    <string name="menu_post">Üzenő Fal</string>
    <string name="menu_login">Bejelentkezés</string>
    <string name="menu_register">Regisztráció</string>

    <string name="gym_search">Gym</string>
    <string name="name">Név</string>
    <string name="db">Létszám</string>
    <string name="category">Válassz túra útvonalat</string>
    <string name="egyeb">Megjegyzés</string>

    <string name="tracking_enabled_notif">Tracking is currently enabled. Tap to cancel.</string>
    <string name="test_email">test@test.com</string>
    <string name="test_password">testpassword</string>
    <string name="firebase_path">location</string>

    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDtpr2-bKo8j5ajENE2UlIBHT4LDYfM81Y</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_hungary">Magyarország</string>
    <string name="desc_hungary">Lakosság: 9.700.000</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--<string name="mapbox_access_token">pk.eyJ1Ijoia2lzYmFuenMiLCJhIjoiY2tnN25nMHhkMDhxczJ4b2NveHU3azdnMCJ9.e-buNymQwDvXiLdvZHiYOw</string> -->
</resources>
