<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:fontFamily="casual"
            android:icon="@drawable/icon_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:fontFamily="casual"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_tura" />
        <item
            android:id="@+id/nav_slideshow"
            android:fontFamily="casual"
            android:icon="@drawable/ic_menu_mapmode"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tools"
            android:fontFamily="casual"
            android:icon="@drawable/icon_utravalo"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/nav_send"
            android:fontFamily="casual"
            android:icon="@drawable/icon_jelent"
            android:title="@string/menu_send" />
        <item
            android:id="@+id/nav_share"
            android:fontFamily="casual"
            android:icon="@drawable/osm_ic_follow_me"
            android:title="@string/menu_share" />

        <item
            android:id="@+id/postFragment"
            android:fontFamily="casual"
            android:icon="@drawable/bonuspack_bubble"
            android:title="@string/menu_post" />

    </group>

</menu>
