<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="hu.bme.aut.vizivandor.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="hu.bme.aut.vizivandor.ui.tura.TuraFragment"
        android:label="@string/menu_tura"
        tools:layout="@layout/fragment_tura" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="hu.bme.aut.vizivandor.ui.terkep.MapFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_terkep_osmdroid" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="hu.bme.aut.vizivandor.ui.utravalo.UtravaloFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_utravalo" />

    <fragment
        android:id="@+id/nav_send"
        android:name="hu.bme.aut.vizivandor.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

    <activity
        android:id="@+id/nav_share"
        android:name="hu.bme.aut.vizivandor.ui.turainditas.GoogleMapsActivity"
        android:label="@string/menu_share"
        tools:layout="@layout/activity_tura_inditas_googlemap" />
    <fragment
        android:id="@+id/postFragment"
        android:name="hu.bme.aut.vizivandor.ui.post.PostFragment"
        android:label="@string/menu_post"
        tools:layout="@layout/fragment_post_newpost" />
    <fragment
        android:id="@+id/nav_login"
        android:name="hu.bme.aut.vizivandor.ui.login.StartLoginRegisterFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_start_login_register" />

</navigation>